[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["jongwoo Yoo <dbwhddn10@gmail.com>"]

[tool.poetry.dependencies]
pydash = "^5.1.0"
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
